# small-global-illumination-series

./: .gitignore  .gitmodules  CMakeLists.txt  small-global-illumination-series.md
ext/: CMakeLists.txt
small_mis/: CMakeLists.txt  Vector3.cuh  small mis.txt  small_mis.cu
small_nee/: CMakeLists.txt  Vector3.cuh  small_nee.cu
small_pt/: CMakeLists.txt  small_pt.cu
tinypt-cu/: CMakeLists.txt  camera.cuh  material.cuh  pch.cuh  ray.cuh  scene.cuh  structs.h  tinypt.cu  triangle.cuh  utils.cu  utils.cuh
tinypt-lbvh/: CMakeLists.txt  tinypt-lbvh.cu
tinypt-optix/: CMakeLists.txt  device_programs.cu  structs.cuh  tinypt-optix.cu  vec3.cuh
tinypt-wavefront/: CMakeLists.txt  tinypt-wavefront.cu  vec3.cuh
